# lockbox-box-service

./: .gitignore  Cargo.toml  GUARDIAN_INDEX_IMPLEMENTATION.md  README.md  build.sh  deploy.sh  docker-compose.test.yml  run-all-tests.sh  run-integration-tests.sh  template.yaml
.github/workflows/: ci.yml  deploy.yml
box-invitation-handler/: Cargo.toml
box-invitation-handler/src/: handlers.rs  main.rs
box-invitation-handler/src/tests/: invitation_handler_tests.rs
box-service/: Cargo.toml
box-service/src/: error.rs  main.rs  main.rs.bak
box-service/src/handlers/: box_handlers.rs  guardian_handlers.rs  mod.rs
box-service/src/models/: mod.rs
box-service/src/routes/: mod.rs
box-service/src/store/: dynamo.rs  memory.rs  mod.rs
box-service/src/tests/: box_tests.rs  guardian_tests.rs  mod.rs  store_tests.rs  utils.rs
invitation-event-service/: Cargo.toml
invitation-event-service/src/: errors.rs  handlers.rs  main.rs
invitation-event-service/src/tests/: event_handler_tests.rs  invitation_event_service_tests.rs  invitation_handler_tests.rs  mod.rs
invitation-service/: Cargo.toml
invitation-service/src/: error.rs  main.rs
invitation-service/src/handlers/: invitation_handlers.rs  mod.rs
invitation-service/src/models/: mod.rs
invitation-service/src/routes/: mod.rs
invitation-service/src/tests/: invitation_handlers_test.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/auth/: mod.rs
shared/src/error/: mod.rs
shared/src/models/: events.rs  mod.rs
shared/src/store/: dynamo.rs  mod.rs
shared/src/test_utils/: dynamo_test_utils.rs  http_test_utils.rs  mock_box_store.rs  mock_invitation_store.rs  mod.rs  test_logging.rs
shared/src/tests/: mock_store_tests.rs  mod.rs  store_tests.rs
src/: error.rs  main.rs
src/handlers/: box_handlers.rs  guardian_handlers.rs  mod.rs
src/models/: mod.rs
src/routes/: mod.rs
src/store/: dynamo.rs  memory.rs  mod.rs
src/tests/: box_tests.rs  guardian_tests.rs  mod.rs  store_tests.rs
user-service/: Cargo.toml
user-service/src/: error.rs  main.rs
user-service/src/models/: user.rs
