[package]
name = "lockbox-box-service"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
aws_lambda_events = { version = "0.16.0", features = ["apigw"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
once_cell = "1.17"
log = "0.4"
simple_logger = "4.0"
http = "0.2.8"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
