[workspace]
members = [
    "box-service",
    "invitation-service",
    "shared",
    "invitation-event-service",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies across most crates
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-trait = "0.1.77"

# AWS dependencies
aws-config = "1.3.1"
aws-sdk-dynamodb = ">=1.0.0"
serde_dynamo = { version = "4.2.0", features = ["aws-sdk-dynamodb+1"] }
lambda_http = "0.9.0"
aws_lambda_events = { version = "0.11", default-features = false }

# Web service dependencies
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
http = "1.0.0"
hyper = "1.0.1"
http-body-util = "0.1.0"

# Auth related
jsonwebtoken = "9.2.0"
base64 = "0.21.7"

# Utility
once_cell = "1.19.0"
