[package]
name = "invitation-event-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = "1.3.1"
aws-sdk-dynamodb = ">=1.0.0"
serde_dynamo = { version = "4.2.0", features = ["aws-sdk-dynamodb+1"] }
lambda_runtime = "0.8.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8.5"
# Include the shared crate
lockbox-shared = { path = "../shared", features = ["test_utils"] }
once_cell = "1.18.0"
async-trait = "0.1.77"

# For parsing SNS events
lambda_http = "0.9.0"
aws_lambda_events = { version = "0.11", default-features = false, features = ["sns"] }

[dev-dependencies]
mockall = "0.12.0" 