[package]
name = "lockbox-invitation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
once_cell = "1.19.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.0.0"
hyper = "1.0.1"
thiserror = "1.0"
lambda_http = "0.9.0"
aws-config = "1.3.1"
aws-sdk-dynamodb = ">=1.0.0"
serde_dynamo = { version = "4.2.0", features = ["aws-sdk-dynamodb+1"] }
async-trait = "0.1.77"
aws_lambda_events = { version = "0.11", default-features = false, features = ["apigw"] }
jsonwebtoken = "9.2.0"
base64 = "0.21.7"
axum-auth = "0.4.0"
nanoid = "0.4.0"
# Include the shared crate
lockbox-shared = { path = "../shared" }

[dev-dependencies]
mockito = "1.3.0" # For mocking HTTP requests/responses if needed later 