[package]
name = "lockbox-invitation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
thiserror = { workspace = true }
lambda_http = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sns = "1.3.1"
serde_dynamo = { workspace = true }
async-trait = { workspace = true }
aws_lambda_events = { version = "0.11", default-features = false, features = ["apigw"] }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
axum-auth = "0.4.0"
nanoid = "0.4.0"
anyhow = "1.0"
# Include the shared crate
lockbox-shared = { path = "../shared", features = ["test_utils"] }
temp-env = "0.3.6"

[dev-dependencies]
mockito = "1.3.0" # For mocking HTTP requests/responses if needed later
uuid = { version = "1.6.1", features = ["v4"] }
env_logger = "0.10.1"
mockall = "0.11"
