[package]
name = "lockbox-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
thiserror = "1.0"
aws-config = "1.3.1"
aws-sdk-dynamodb = ">=1.0.0"
serde_dynamo = { version = "4.2.0", features = ["aws-sdk-dynamodb+1"] }
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["rt"] } 