[package]
name = "lockbox-shared"
version = "0.1.0"
edition = "2021"

# Define features
[features]
default = []
test_utils = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
thiserror = "1.0"
aws-config = "1.3.1"
aws-sdk-dynamodb = ">=1.0.0"
serde_dynamo = { version = "4.2.0", features = ["aws-sdk-dynamodb+1"] }
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["rt", "test-util", "macros"] }
# Auth middleware dependencies
axum = "0.7.2"
base64 = "0.21.7"
tracing = "0.1"
jsonwebtoken = "9.2.0"
http = "1.0.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
# Logging
log = "0.4"
env_logger = "0.10" 